@@ -1,4 +1,31 @@
-#pragma once
+/* 
+Generic Memory Manager (memory-mgr)
+Copyright (c) 2007 Anton Matosov
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 3, 29 June 2007 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library; if not, write to the Free Software
+Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA <http://fsf.org/>
+
+
+Please feel free to contact me via e-mail: shikin@users.sourceforge.net
+*/
+
+#ifndef MGR_SIMPLE_PTR_HEADER
+#define MGR_SIMPLE_PTR_HEADER
+
+#if defined(_MSC_VER) && (_MSC_VER >= 1020)
+#	pragma once
+#endif
 
 #include "detail/type_manip.h"
 #include "detail/static_assert.h"
@@ -240,3 +267,5 @@ namespace memory_mgr
 // 		}
 	}
 }
+
+#endif// MGR_SIMPLE_PTR_HEADER
